Closed Bug 1800955 Opened 3 years ago Closed 3 years ago

[css-contain][css-sizing] `content-visibility: auto` kinda broken by not using last remembered size with `contain: size`

Categories

(Core :: Layout, defect)

defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox109 --- fixed

People

(Reporter: mozilla-apprentice, Assigned: Oriol)

References

Details

Attachments

(1 file)

A resolution was made for csswg-drafts/#7807.

[css-contain][css-sizing] `content-visibility: auto` kinda broken by not using last remembered size with `contain: size`

  • RESOLVED: Take second solution for this case. Update the last remembered size if element doesn't skip its contents.

Discussion.

(ni=Oriol who's doing work in this area & who filed the spec issue here; feel free to dupe/morph this bug as-appropriate, e.g. if this work is happening as part of some other broader bug.)

Flags: needinfo?(oriol-bugzilla)

Previously it was only updated when the element didn't have size
containment, but this could result in non-stable size when combining
'content-visibility: auto' and 'contain: size'.

This change is not yet observable in Firefox since the implementation of
'content-visibility: auto' is still ongoing.

The test should pass once 'content-visibility: auto' works.

Assignee: nobody → oriol-bugzilla
Status: NEW → ASSIGNED
Pushed by oriol-bugzilla@hotmail.com: https://hg.mozilla.org/integration/autoland/rev/2032cc4734aa Update last remembered size when element is not skipping contents. r=emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/37007 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
Flags: needinfo?(oriol-bugzilla)
Upstream PR merged by moz-wptsync-bot
Regressions: 1806902
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: