Bug 1800955 - Update last remembered size when element is not skipping contents. r=emilio

Previously it was only updated when the element didn't have size
containment, but this could result in non-stable size when combining
'content-visibility: auto' and 'contain: size'.

Test auto-012.html is still failing since 'content-visibility: auto' has
not been implemented yet.

Differential Revision: https://phabricator.services.mozilla.com/D162254